Page block posts and back bot commands through blogs